--- a/batman.html
+++ b/batman.html
@@ -2,27 +2,36 @@
 <html lang="en">
 <head>
 <meta charset="UTF-8">
-<title>Batman: Gotham Defender</title>
+<title>Batman Game 🦇</title>
 <style>
     body {
         margin: 0;
-        background: #000;
-        color: #fff;
+        background: radial-gradient(circle, #111, #000);
+        color: white;
         font-family: Arial, sans-serif;
         text-align: center;
     }
+    h1 {
+        margin: 10px 0;
+    }
     canvas {
-        background: #0a0a0a;
+        background: linear-gradient(#111, #222);
+        border: 3px solid yellow;
         display: block;
-        margin: auto;
-        border: 3px solid #222;
+        margin: 0 auto;
+    }
+    .info {
+        margin: 10px;
+        font-size: 14px;
     }
 </style>
 </head>
 <body>
 
 <h1>🦇 Batman: Gotham Defender</h1>
-<p>← → Move | Space = Batarang</p>
+<div class="info">
+    Move: ⬅️ ➡️ | Shoot: Space | Score enemies before they reach you
+</div>
 
 <canvas id="game" width="600" height="400"></canvas>
 
@@ -30,7 +39,7 @@
 const canvas = document.getElementById("game");
 const ctx = canvas.getContext("2d");
 
-let keys = {};
+// Game state
 let score = 0;
 let gameOver = false;
 
@@ -38,129 +47,125 @@ let gameOver = false;
 const batman = {
     x: 280,
     y: 340,
-    w: 40,
-    h: 40,
+    width: 40,
+    height: 40,
     speed: 5
 };
 
-// Batarangs
-let shots = [];
+// Bullets (Batarangs)
+let bullets = [];
 
 // Enemies
 let enemies = [];
 
+// Controls
+const keys = {};
 document.addEventListener("keydown", e => keys[e.code] = true);
 document.addEventListener("keyup", e => keys[e.code] = false);
 
-function spawnEnemy() {
-    enemies.push({
-        x: Math.random() * 560,
-        y: -40,
-        w: 40,
-        h: 40,
-        speed: 2 + Math.random() * 2
-    });
-}
-
-setInterval(spawnEnemy, 1000);
-
-function update() {
-    if (gameOver) return;
-
-    // Move Batman
-    if (keys["ArrowLeft"] && batman.x > 0) batman.x -= batman.speed;
-    if (keys["ArrowRight"] && batman.x < canvas.width - batman.w)
-        batman.x += batman.speed;
-
-    // Shoot
-    if (keys["Space"]) {
-        if (!keys._shot) {
-            shots.push({
-                x: batman.x + batman.w / 2 - 3,
-                y: batman.y,
-                w: 6,
-                h: 12,
-                speed: 7
-            });
-            keys._shot = true;
-        }
-    } else {
-        keys._shot = false;
+// Shoot
+document.addEventListener("keydown", e => {
+    if (e.code === "Space" && !gameOver) {
+        bullets.push({ x: batman.x + 18, y: batman.y, speed: 7 });
     }
+});
 
-    // Move shots
-    shots.forEach(s => s.y -= s.speed);
-    shots = shots.filter(s => s.y > -20);
-
-    // Move enemies
-    enemies.forEach(e => e.y += e.speed);
-
-    // Collision detection
-    enemies.forEach((e, ei) => {
-        // Hit Batman
-        if (
-            e.x < batman.x + batman.w &&
-            e.x + e.w > batman.x &&
-            e.y < batman.y + batman.h &&
-            e.y + e.h > batman.y
-        ) {
-            gameOver = true;
-        }
-
-        shots.forEach((s, si) => {
-            if (
-                s.x < e.x + e.w &&
-                s.x + s.w > e.x &&
-                s.y < e.y + e.h &&
-                s.y + s.h > e.y
-            ) {
-                enemies.splice(ei, 1);
-                shots.splice(si, 1);
-                score += 10;
-            }
+// Spawn enemies
+setInterval(() => {
+    if (!gameOver) {
+        enemies.push({
+            x: Math.random() * (canvas.width - 30),
+            y: -30,
+            width: 30,
+            height: 30,
+            speed: 2 + Math.random() * 2
         });
-    });
+    }
+}, 1000);
 
-    enemies = enemies.filter(e => e.y < canvas.height + 50);
-    score++;
+// Collision detection
+function collide(a, b) {
+    return (
+        a.x < b.x + b.width &&
+        a.x + a.width > b.x &&
+        a.y < b.y + b.height &&
+        a.y + a.height > b.y
+    );
 }
 
-function draw() {
-    ctx.clearRect(0, 0, canvas.width, canvas.height);
-
-    // Batman
-    ctx.fillStyle = "#111";
-    ctx.fillRect(batman.x, batman.y, batman.w, batman.h);
+// Draw Batman
+function drawBatman() {
+    ctx.fillStyle = "black";
+    ctx.fillRect(batman.x, batman.y, batman.width, batman.height);
     ctx.fillStyle = "yellow";
-    ctx.fillRect(batman.x + 10, batman.y + 10, 20, 10);
+    ctx.fillText("🦇", batman.x + 8, batman.y + 28);
+}
 
-    // Shots
-    ctx.fillStyle = "yellow";
-    shots.forEach(s => ctx.fillRect(s.x, s.y, s.w, s.h));
-
-    // Enemies
-    ctx.fillStyle = "red";
-    enemies.forEach(e => ctx.fillRect(e.x, e.y, e.w, e.h));
-
-    // UI
+// Draw score
+function drawScore() {
     ctx.fillStyle = "white";
     ctx.font = "16px Arial";
     ctx.fillText("Score: " + score, 10, 20);
+}
+
+// Game loop
+function gameLoop() {
+    ctx.clearRect(0, 0, canvas.width, canvas.height);
 
     if (gameOver) {
         ctx.fillStyle = "red";
-        ctx.font = "40px Arial";
-        ctx.fillText("GAME OVER", 170, 200);
+        ctx.font = "30px Arial";
+        ctx.fillText("GAME OVER", 200, 200);
+        ctx.font = "18px Arial";
+        ctx.fillText("Final Score: " + score, 225, 240);
+        return;
     }
+
+    // Movement
+    if (keys["ArrowLeft"] && batman.x > 0) batman.x -= batman.speed;
+    if (keys["ArrowRight"] && batman.x < canvas.width - batman.width)
+        batman.x += batman.speed;
+
+    // Bullets
+    bullets.forEach((b, i) => {
+        b.y -= b.speed;
+        ctx.fillStyle = "yellow";
+        ctx.fillRect(b.x, b.y, 4, 10);
+        if (b.y < 0) bullets.splice(i, 1);
+    });
+
+    // Enemies
+    enemies.forEach((e, ei) => {
+        e.y += e.speed;
+        ctx.fillStyle = "red";
+        ctx.fillRect(e.x, e.y, e.width, e.height);
+
+        // Enemy hits Batman
+        if (collide(batman, e)) {
+            gameOver = true;
+        }
+
+        // Bullet hits enemy
+        bullets.forEach((b, bi) => {
+            if (collide({x:b.x,y:b.y,width:4,height:10}, e)) {
+                enemies.splice(ei, 1);
+                bullets.splice(bi, 1);
+                score++;
+            }
+        });
+
+        // Enemy passes bottom
+        if (e.y > canvas.height) {
+            gameOver = true;
+        }
+    });
+
+    drawBatman();
+    drawScore();
+    requestAnimationFrame(gameLoop);
 }
 
-function loop() {
-    update();
-    draw();
-    requestAnimationFrame(loop);
-}
-
-loop();
+gameLoop();
 </script>
 
 </body>
