--- a/batman.html
+++ b/batman.html
@@ -1,172 +1,68 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
-<meta charset="UTF-8">
-<title>Batman Game 🦇</title>
-<style>
-    body {
-        margin: 0;
-        background: radial-gradient(circle, #111, #000);
-        color: white;
-        font-family: Arial, sans-serif;
-        text-align: center;
-    }
-    h1 {
-        margin: 10px 0;
-    }
-    canvas {
-        background: linear-gradient(#111, #222);
-        border: 3px solid yellow;
-        display: block;
-        margin: 0 auto;
-    }
-    .info {
-        margin: 10px;
-        font-size: 14px;
-    }
-</style>
+<title>Batman Game</title>
 </head>
-<body>
 
-<h1>🦇 Batman: Gotham Defender</h1>
-<div class="info">
-    Move: ⬅️ ➡️ | Shoot: Space | Score enemies before they reach you
-</div>
+<body bgcolor="black" text="yellow">
 
-<canvas id="game" width="600" height="400"></canvas>
+<center>
+<h1>🦇 BATMAN: GOTHAM MISSION 🦇</h1>
+<p>You are Batman. Gotham needs you.</p>
+<hr>
 
-<script>
-const canvas = document.getElementById("game");
-const ctx = canvas.getContext("2d");
+<h2>Choose Your Action</h2>
 
-// Game state
-let score = 0;
-let gameOver = false;
+<form>
+    <input type="radio" name="choice"> Patrol Gotham<br><br>
+    <input type="radio" name="choice"> Fight Criminals<br><br>
+    <input type="radio" name="choice"> Use Batmobile<br><br>
+    <input type="radio" name="choice"> Rest in Batcave<br><br>
+</form>
 
-// Batman
-const batman = {
-    x: 280,
-    y: 340,
-    width: 40,
-    height: 40,
-    speed: 5
-};
+<hr>
 
-// Bullets (Batarangs)
-let bullets = [];
+<h2>Enemy Encounter</h2>
+<p>The Joker appears! 😈</p>
 
-// Enemies
-let enemies = [];
+<form>
+    <input type="checkbox"> Throw Batarang<br><br>
+    <input type="checkbox"> Use Smoke Bomb<br><br>
+    <input type="checkbox"> Call Robin<br><br>
+</form>
 
-// Controls
-const keys = {};
-document.addEventListener("keydown", e => keys[e.code] = true);
-document.addEventListener("keyup", e => keys[e.code] = false);
+<hr>
 
-// Shoot
-document.addEventListener("keydown", e => {
-    if (e.code === "Space" && !gameOver) {
-        bullets.push({ x: batman.x + 18, y: batman.y, speed: 7 });
-    }
-});
+<h2>Mission Status</h2>
+<ul>
+    <li>🦇 Health: 100%</li>
+    <li>🃏 Enemies Remaining: 3</li>
+    <li>🏆 Score: 0</li>
+</ul>
 
-// Spawn enemies
-setInterval(() => {
-    if (!gameOver) {
-        enemies.push({
-            x: Math.random() * (canvas.width - 30),
-            y: -30,
-            width: 30,
-            height: 30,
-            speed: 2 + Math.random() * 2
-        });
-    }
-}, 1000);
+<hr>
 
-// Collision detection
-function collide(a, b) {
-    return (
-        a.x < b.x + b.width &&
-        a.x + a.width > b.x &&
-        a.y < b.y + b.height &&
-        a.y + a.height > b.y
-    );
-}
+<h2>Bat Gadgets</h2>
+<select>
+    <option>Batarang</option>
+    <option>Grapple Gun</option>
+    <option>Batmobile</option>
+    <option>Smoke Bomb</option>
+</select>
 
-// Draw Batman
-function drawBatman() {
-    ctx.fillStyle = "black";
-    ctx.fillRect(batman.x, batman.y, batman.width, batman.height);
-    ctx.fillStyle = "yellow";
-    ctx.fillText("🦇", batman.x + 8, batman.y + 28);
-}
+<hr>
 
-// Draw score
-function drawScore() {
-    ctx.fillStyle = "white";
-    ctx.font = "16px Arial";
-    ctx.fillText("Score: " + score, 10, 20);
-}
+<p>
+<b>Tip:</b> Gotham never sleeps. Choose wisely, Dark Knight.
+</p>
 
-// Game loop
-function gameLoop() {
-    ctx.clearRect(0, 0, canvas.width, canvas.height);
+<hr>
 
-    if (gameOver) {
-        ctx.fillStyle = "red";
-        ctx.font = "30px Arial";
-        ctx.fillText("GAME OVER", 200, 200);
-        ctx.font = "18px Arial";
-        ctx.fillText("Final Score: " + score, 225, 240);
-        return;
-    }
+<p>
+🦇 <b>THE END (HTML EDITION)</b> 🦇
+</p>
 
-    // Movement
-    if (keys["ArrowLeft"] && batman.x > 0) batman.x -= batman.speed;
-    if (keys["ArrowRight"] && batman.x < canvas.width - batman.width)
-        batman.x += batman.speed;
-
-    // Bullets
-    bullets.forEach((b, i) => {
-        b.y -= b.speed;
-        ctx.fillStyle = "yellow";
-        ctx.fillRect(b.x, b.y, 4, 10);
-        if (b.y < 0) bullets.splice(i, 1);
-    });
-
-    // Enemies
-    enemies.forEach((e, ei) => {
-        e.y += e.speed;
-        ctx.fillStyle = "red";
-        ctx.fillRect(e.x, e.y, e.width, e.height);
-
-        // Enemy hits Batman
-        if (collide(batman, e)) {
-            gameOver = true;
-        }
-
-        // Bullet hits enemy
-        bullets.forEach((b, bi) => {
-            if (collide({x:b.x,y:b.y,width:4,height:10}, e)) {
-                enemies.splice(ei, 1);
-                bullets.splice(bi, 1);
-                score++;
-            }
-        });
-
-        // Enemy passes bottom
-        if (e.y > canvas.height) {
-            gameOver = true;
-        }
-    });
-
-    drawBatman();
-    drawScore();
-    requestAnimationFrame(gameLoop);
-}
-
-gameLoop();
-</script>
+</center>
 
 </body>
 </html>
